2000-10-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findgroup): Make sure that a DRGROUP/DRECIPES of
	all spaces works okay. 

2000-10-17  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (fluxes_mon): Make use of JPL_DIR and FLUXES_DIR
	that are now set by Starlink.

2000-10-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (tau): Try to fix problem of using 850N for
	scaling to 450N, not just 450W. A bit of a sledge hammer approach.
	May need to revisit with cleverer approach using the rules file
	rather than searching the index file twice.

2000-10-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: Use Starlink::Versions. Fix vecplot and
	histogram for kappa 0.14 and 0.15-5 respectively.

2000-10-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Remove documentation for $KAPPA_* variables 

2000-08-24  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: Fix max() and min() with 0

2000-08-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_add_code_to_recipe): Check that ORAC_STATUS is in
	an assignment

	* Calib/SCUBA.pm (iscalsource): uc() returns '' when given undef!

2000-08-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm: Add support for wideband filter secondary
	calibrator fluxes.

2000-07-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (tau): Add caching

2000-07-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Group.pm (membertagset): Add tags system

	* Frame.pm (tagretrieve): Add tags system

2000-07-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm: Add support for BEAM and ARCSEC units in gain determination. 

2000-07-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findfilters): Determine the FILT_N name correctly
	from the FILTER name (ie 850W from 850W:450W)

	* Display.pm (parse_file_defn): Force case insensitive id match
	(was doing half the job before and fialing to match _I)

2000-06-14  Tim Jenness  <timj@jach.hawaii.edu>
