@@ -1,3 +1,7 @@
+2000-10-31  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/GAIA.pm (image): Check the return value of cwd
+
 2000-10-20  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/JCMT.pm (findgroup): Make sure that a DRGROUP/DRECIPES of
